--- a/spman/.settings/.gitignore
+++ b/spman/.settings/.gitignore
@@ -8,3 +8,5 @@
 /org.eclipse.wst.common.component
 /org.eclipse.wst.common.project.facet.core.prefs.xml
 /org.eclipse.wst.common.project.facet.core.xml
+/org.eclipse.m2e.wtp.prefs
+/org.eclipse.wst.validation.prefs
