--- a/spman/pom.xml
+++ b/spman/pom.xml
@@ -5,4 +5,17 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>spman</name>
   <description>Tool Manager for sport</description>
+  <properties>
+  	<maven.compiler.source>1.8</maven.compiler.source>
+  	<maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+  <dependencies>
+<!-- https://mvnrepository.com/artifact/javax.persistence/persistence-api -->
+<dependency>
+    <groupId>org.eclipse.persistence</groupId>
+    <artifactId>eclipselink</artifactId>
+    <version>2.5.2-M1</version>
+</dependency>
+  </dependencies>
+  <packaging>war</packaging>
 </project>
